<resources>
    <string name="app_name">AghsiliniLan</string>
    <string name="retry">Retry</string>

    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="en">En</string>
    <string name="walk_title_1">New Laundry?</string>
    <string name="walk_msg1">Register now with the laundry information, choose all your provided departments, and start</string>
    <string name="walk_title_2">Your requests are in your hands?</string>
    <string name="walk_msg2">Receive all requests for your laundry and follow them up to date</string>

    <string name="login"> Login </string>
    <string name="signup_now">registration</string>
    <string name="new_user">New Laundry</string>
    <string name="signup">Register  </string>
    <string name="password">password</string>
    <string name="forget_password">Forgot your password</string>
    <string name="login_now">Login now</string>
    <string name="pass_confirm">confirm password</string>
    <string name="bysigningin_you_agree_to">By registering you agree to </string>
    <string name="resend">Resend</string>
    <string name="new_password">New Password</string>
    <string name="skip_register">Skip</string>
    <string name="confirm_new_password">Confirm password</string>
    <string name="email">E-mail</string>
    <string name="send_message">Write your message here</string>
    <string name="new_orde">New order</string>
    <string name="order_status">Order status</string>
    <string name="delivery_informaion">Delivery information</string>
    <string name="laundry_name">Laundry name</string>
    <string name="phone_number">Mobile number</string>
    <string name="next">next</string>
    <string name="change_pass">change password</string>
    <string name="no_internet">There is no internet connection</string>
    <string name="empty_name_msg">Please Enter your name</string>
    <string name="msg_empty_phone_number">Please enter your Name</string>
    <string name="empty_confirm_password">Please confirm your password</string>
    <string name="both_passwords_must_match">Passwords don\'t match</string>
    <string name="empty_msg_cc">Please Enter Country Code</string>
    <string name="msg_empty_lat">Please Specify your Location</string>
    <string name="msg_empty_address">Please Enter your address</string>
    <string name="undefined">Undefined</string>
    <string name="done">Done</string>
    <string name="not_all_permissions_accepted">not_all_permissions_accepted</string>
    <string name="gps">To Continue , Let your device turn on loaction using Google\'s Loactiaon Service</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="msg_empty_new_password">Please enter your password</string>
    <string name="msg_empty_otp">Please enter your OTP</string>
    <string name="km">KM</string>
    <string name="sr">sar</string>
    <string name="no_laundries">There are no laundries</string>
    <string name="no_items_in_this_service">There are no items in this service </string>
    <string name="msg_empty_password">Please enter your password</string>
    <string name="otp">OTP\n</string>
    <string name="name">Laundry name</string>
    <string name="address">Address</string>
    <string name="terms_condition"> Terms and Conditions </string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="more">More</string>
    <string name="new_">New</string>
    <string name="current">Current</string>
    <string name="finshed">Finished</string>
    <string name="urgent">Urgent</string>
    <string name="new_order">New Order</string>
    <string name="driver_on_way">Driver on Way</string>
    <string name="waiting_driver">Waiting Driver</string>
    <string name="driver_recive_from_customer">Driver recive from Customer</string>
    <string name="laundry_recive">Laundry Recived</string>
    <string name="start_prepare">Start Preparation</string>
    <string name="end_prepared">End Preparation</string>
    <string name="driver_recive_from_laundry">Driver recive from Laundry</string>
    <string name="deliverd">Delivered </string>
    <string name="no_orders">There are no orders</string>
    <string name="no_orders_new">There are no new orders</string>
    <string name="no_orders_before"> There are no finished orders </string>
    <string name="no_orders_current"> There are no current orders "</string>
    <string name="signin_first">Register first with the application</string>
    <string name="sign_in_">You can order the washing products you need, but only after logging in first</string>
    <string name="you_can_change_pass_now">You can change your password</string>
    <string name="you_can_delete_your_acc_now">You can delete your account</string>
    <string name="delete_acc">Delete account</string>
      <string name="delivery_addres">Delivery addresses</string>
    <string name="are_yoy_sure_to_delete_acc">Are you sure to delete the account?</string>
    <string name="yes_delte">Yes Delete</string>
    <string name="no_thankes">no thanks</string>
    <string name="you_can_add_or_Delete_Address">You can delete and add a new address</string>
      <string name="wallet">wallet</string>
    <string name="setting">Settings</string>
    <string name="about_us">About Us</string>
    <string name="notifaction">notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="it">technical support</string>
    <string name="logout">Logout</string>
    <string name="laundry_rates">Customer reviews</string>
    <string name="total">Total</string>
    <string name="commetion">Commissions</string>
    <string name="profits">Profits</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdraw_money">Withdraw</string>
    <string name="amount">Amount</string>
    <string name="bank_name">bank name</string>
    <string name="no_items">There are no products</string>
    <string name="no_items_to_add">There are no products in this service</string>
    <string name="no_products">There are no products</string>
    <string name="no_items_to_Add_to_basket">There are no products to add to the cart or request the service</string>
    <string name="no_otifications">There are no notifications</string>
    <string name="no_notifaction_for_you">There are no notifications</string>
    <string name="acc_number">account number</string>
    <string name="abou_app">About the application</string>
    <string name="services">Laundry services</string>
    <string name="service">services </string>
    <string name="choose_among_several_services">Choose from many services and specify your request</string>
    <string name="regular">normal</string>
    <string name="add_to_basket">Add to cart</string>
    <string name="items">Items</string>
    <string name="sar">S.R</string>
    <string name="bill">Bill</string>
    <string name="sub_total">Total</string>
    <string name="delivery_fees">Delivery fees</string>
    <string name="tax_Service">Tax</string>
    <string name="service_you_want">Services provided by your laundry</string>
    <string name="edit">Edit</string>
    <string name="edit_items">Edit items</string>
    <string name="edit_item">Edit item</string>
    <string name="add_item">Add item</string>
    <string name="item_in_ar">Product name in Arabic</string>
    <string name="item_name_inen">Product name in English</string>
    <string name="regular_price">Regular price</string>
    <string name="urgent_price">Urgent price</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="msg_empty_argent_price">"Enter urgent price "</string>
    <string name="msg_empty_price">Enter price</string>
    <string name="msg_ar_name"> Enter Product name in Arabic</string>
    <string name="msg_empty_en_name">Enter Product name in English</string>
    <string name="choosen_items">Chosen Items</string>
    <string name="payment_option">payment method</string>
    <string name="agree">agree</string>
    <string name="decline">decline</string>
    <string name="edit_bill">edit bill</string>
    <string name="dropoff">Received</string>
    <string name="client_name">customer name</string>
    <string name="driver_name">driver name</string>
    <string name="upload_logo">upload the laundry logo</string>
    <string name="empty_logo">Please Upload your logo</string>
    <string name="preparied_now">It is being prepared</string>
    <string name="preparied">Prepared</string>
    <string name="compeleted">Compeleted</string>
    <string name="deliverd_to_laundry">Delivered to laundry</string>
    <string name="start_prep">Preparing</string>
    <string name="done_prep">Prepared</string>
    <string name="deliver">Deliver</string>
    <string name="ar">العربية</string>
    <string name="msg_empty_amount">Please enter the amount</string>
    <string name="msg_empty_bank_name">Please enter the bank name</string>
    <string name="empty_account_number">Please enter the account number</string>
    <string name="note">Note</string>
    <string name="enter_notes">"Please Enter notes "</string>
    <string name="enter_amount">"Enter Amount "</string>
    <string name="dear">Dear Client ..</string>
    <string name="balance">Balance</string>
    <string name="edit_profile">Edit profile</string>
    <string name="e_pay">E-pay</string>
    <string name="request_has_been_sent">The request has been sent, awaiting the system acceptance </string>
    <string name="have_complain">You have an inquiry or complaint</string>
    <string name="contact_us_to_find_answers">Contact us easily, to find all the answers you need</string>
    <string name="contact_us_throught_email">Contact us via emails</string>

</resources>