<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_top"
        android:gravity="center"
      >


        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:text="@string/edit_bill"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/amount"
            android:textColor="@color/grey_dark1"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt2" />

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@drawable/bg_light_blue"
        android:inputType="numberDecimal"    android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/amount"
            android:minHeight="@dimen/_40sdp"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="@color/light_grey1"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@id/tv2" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/note"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_amount" />

        <EditText
            android:id="@+id/et_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_rounded_corner"
            android:drawableStart="@drawable/ic_notes"
            android:drawablePadding="@dimen/_5sdp"
            android:hint="@string/note"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_50sdp"
            app:layout_constraintTop_toBottomOf="@id/tv3" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_withdraw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_47sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
    android:textAllCaps="false"        android:backgroundTint="@color/blue"
   android:layout_marginBottom="@dimen/_20sdp"         android:text="@string/edit_bill"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_21sdp"
            app:layout_constraintTop_toBottomOf="@id/et_note"
            app:layout_constraintBottom_toTopOf="@id/progress_bar"
            />
        <com.google.android.material.progressindicator.LinearProgressIndicator
             android:id="@+id/progress_bar"
     android:visibility="gone"       android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
              app:indicatorColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>