<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragment.order.OrderFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lyt_header_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/header_more"
                android:minHeight="@dimen/_140sdp"
                android:paddingTop="@dimen/_20sdp"
                android:paddingBottom="@dimen/_22sdp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/_80sdp"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.card.MaterialCardView

                        android:id="@+id/card_back"
                        android:layout_width="@dimen/_33sdp"
                        android:layout_height="@dimen/_33sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_4sdp"
                        android:backgroundTint="@color/transparent"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="@dimen/_25sdp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_title"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_title"
                        app:strokeColor="@color/white"
                        app:strokeWidth="2dp">

                        <ImageView
                            android:id="@+id/iv_back"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center"
                            android:background="?attr/selectableItemBackground"
                            android:padding="@dimen/_5sdp"
                            android:rotation="180"
                            android:src="@drawable/iv_back"
                            android:tint="@color/white"
                            tools:ignore="UseAppTint" />

                    </com.google.android.material.card.MaterialCardView>


                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center"
                         android:textColor="@color/white"
                        android:textSize="@dimen/_15sdp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/card_back"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_services"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar"
                    tools:listitem="@layout/item_service" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lyt_header_blue">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/item_in_ar"
                        android:textColor="@color/grey_dark"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_name_ar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/bg_light_blue"
                        android:hint="@string/item_in_ar"
                        android:minHeight="@dimen/_40sdp"
                        android:paddingHorizontal="@dimen/_12sdp"
                        android:textColor="@color/grey_dark"
                        android:textColorHint="@color/light_grey1"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_name" />

                    <TextView
                        android:id="@+id/tv_namen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/item_name_inen"
                        android:textColor="@color/grey_dark"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/et_name_ar" />

                    <EditText
                        android:id="@+id/et_name_en"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/bg_light_blue"
                        android:hint="@string/item_name_inen"
                        android:minHeight="@dimen/_40sdp"
                        android:paddingHorizontal="@dimen/_12sdp"
                        android:textColor="@color/grey_dark"
                        android:textColorHint="@color/light_grey1"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_namen" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent=".5" />

                    <TextView
                        android:id="@+id/tv_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_11sdp"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/_20sdp"
                        android:text="@string/regular_price"
                        android:textColor="@color/grey_dark"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="@id/et_name_en"
                        app:layout_constraintTop_toBottomOf="@id/et_name_en" />

                    <EditText
                        android:id="@+id/et_price"
                        android:layout_width="0dp"
                android:inputType="numberDecimal"        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_15sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@drawable/bg_light_blue"
                        android:gravity="center_vertical"
                        android:hint="@string/price"
                        android:minHeight="@dimen/_40sdp"
                        android:paddingHorizontal="@dimen/_15sdp"
                        android:textColor="@color/grey_dark"
                        android:textColorHint="@color/light_grey1"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@id/guideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_2" />

                    <TextView
                        android:id="@+id/tv_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/_20sdp"
                        android:text="@string/urgent_price"
                        android:textColor="@color/grey_dark"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/guideline"
                        app:layout_constraintTop_toTopOf="@id/tv_2" />

                    <EditText
                        android:id="@+id/et_urgent_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:background="@drawable/bg_light_blue"
                        android:inputType="numberDecimal"            android:gravity="center_vertical"
                        android:hint="@string/price"
                        android:minHeight="@dimen/_40sdp"
                        android:paddingHorizontal="@dimen/_15sdp"
                        android:text=""
                        android:textColor="@color/grey_dark"
                        android:textColorHint="@color/light_grey1"
                        android:textSize="@dimen/_11sdp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/guideline"
                        app:layout_constraintTop_toBottomOf="@id/tv_2" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_save"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginHorizontal="@dimen/_15sdp"
               android:textAllCaps="false"         android:layout_marginTop="@dimen/_30sdp"
                        android:backgroundTint="@color/blue"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        app:cornerRadius="@dimen/_21sdp"
                        app:layout_constraintTop_toBottomOf="@id/et_urgent_price" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.core.widget.NestedScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>